[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/CardChoice.gd" type="Script" id=1]
[ext_resource path="res://Fonts/SketchnoteRegular.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/iconShip.png" type="Texture" id=3]
[ext_resource path="res://Sprites/iconWorm.png" type="Texture" id=4]
[ext_resource path="res://Sprites/iconOrbit.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="CardChoice" type="Node"]
script = ExtResource( 1 )

[node name="Prompt" type="Label" parent="."]
margin_left = 390.0
margin_top = 34.0
margin_right = 892.0
margin_bottom = 68.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "It's your turn! Ask somebody for a card."

[node name="XenoOptions" type="HFlowContainer" parent="."]
margin_left = 29.0
margin_top = 561.0
margin_right = 379.0
margin_bottom = 710.0

[node name="XenoOrbit" type="TextureButton" parent="XenoOptions"]
margin_right = 113.0
margin_bottom = 149.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 5 )

[node name="XenoShip" type="TextureButton" parent="XenoOptions"]
margin_left = 117.0
margin_right = 230.0
margin_bottom = 149.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 3 )

[node name="XenoWorm" type="TextureButton" parent="XenoOptions"]
margin_left = 234.0
margin_right = 347.0
margin_bottom = 149.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )

[node name="AnnieOptions" type="HFlowContainer" parent="."]
margin_left = 468.0
margin_top = 561.0
margin_right = 818.0
margin_bottom = 710.0

[node name="XenoOrbit" type="TextureButton" parent="AnnieOptions"]
margin_right = 113.0
margin_bottom = 149.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 5 )

[node name="XenoShip" type="TextureButton" parent="AnnieOptions"]
margin_left = 117.0
margin_right = 230.0
margin_bottom = 149.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 3 )

[node name="XenoWorm" type="TextureButton" parent="AnnieOptions"]
margin_left = 234.0
margin_right = 347.0
margin_bottom = 149.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )

[node name="RobotOptions" type="HFlowContainer" parent="."]
margin_left = 901.0
margin_top = 561.0
margin_right = 1251.0
margin_bottom = 710.0

[node name="XenoOrbit" type="TextureButton" parent="RobotOptions"]
margin_right = 113.0
margin_bottom = 149.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 5 )

[node name="XenoShip" type="TextureButton" parent="RobotOptions"]
margin_left = 117.0
margin_right = 230.0
margin_bottom = 149.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 3 )

[node name="XenoWorm" type="TextureButton" parent="RobotOptions"]
margin_left = 234.0
margin_right = 347.0
margin_bottom = 149.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )

[node name="TooltipParent" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TooltipXeno" type="Label" parent="TooltipParent"]
visible = false
margin_left = 3.0
margin_top = -37.0
margin_right = 408.0
margin_bottom = -3.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Ask the xenophage for this card."
valign = 2

[node name="TooltipAnnie" type="Label" parent="TooltipParent"]
visible = false
margin_left = 3.0
margin_top = -37.0
margin_right = 316.0
margin_bottom = -3.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Ask Aniline for this card."
valign = 2

[node name="TooltipRobot" type="Label" parent="TooltipParent"]
visible = false
margin_left = 3.0
margin_top = -144.0
margin_right = 449.0
margin_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Ask 3b42dd00-903a-47b8-87b8-47e0-4447-fcf1-2bed-a6a4-dcf3-484c-9f5420547c893ba1 for this card."
valign = 2
autowrap = true

[connection signal="mouse_entered" from="XenoOptions/XenoOrbit" to="." method="_on_XenoOrbit_mouse_entered"]
[connection signal="mouse_exited" from="XenoOptions/XenoOrbit" to="." method="_on_XenoOrbit_mouse_exited"]
